@@ -2,6 +2,15 @@
 
         Done with and reviewed by Lars and Zack.
 
+        Added custom preprocessor support to make_names.pl and use the moc for it in the Qt build.
+
+        * WebCore.pro:
+        * ksvg2/scripts/make_names.pl:
+
+2007-07-27  Simon Hausmann  <hausmann@kde.org>
+
+        Done with and reviewed by Lars and Zack.
+
         Disable the batch mode for nmake to work around the clash of Node.c and Node.cpp both mapping to Node.obj
 
         * WebCore.pro:
